# better_default

./: Cargo.toml  README.md
examples/: basic_enum.rs  basic_struct.rs  enum_per_field.rs  enum_top_attribute.rs  struct_per_field.rs  struct_top_attribute.rs
scripts/: build_crate_doc.bat  publish.py
src/: attrs.rs  default.rs  derive.rs  field_assign.rs  fields.rs  lib.rs  top_attribute.rs
tests/: test_compile.rs  test_enum.rs  test_struct.rs
tests/compile_fail/: attribute_duplicates_on_same_field.rs  generics_missing_default.rs  incompatible_types.rs  incompatible_types.stderr
tests/compile_fail/enum/: attribute_duplicates_on_same_field.rs  attribute_duplicates_on_same_field.stderr  attribute_on_variant_fields_but_not_on_variant_itself.rs  default_already_selected.rs  generics_missing_default.rs  generics_missing_default.stderr  incompatible_types.rs  incompatible_types.stderr  top_attribute_conflict.rs  variant_not_selected.rs  variant_not_selected.stderr
tests/compile_pass/enum/: basic.rs  custom_default_top_attribute copy.rs  custom_default_top_attribute.rs  generics.rs  unmodified.rs
tests/compile_pass/struct/: basic.rs  custom_values.rs  generics.rs  unmodified.rs
