[package]
name = "better_default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.36"
syn = { version = "2.0.58", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.91"
